Display message when there are no predictions and improve styling

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,11 @@
   background-color: lightGray;
 }
 
+/* Pane info */
+.pane {
+  padding: 0 2em;
+}
+
 /* Rounded border */
 hr.left {
   border-top: 8px solid lightGray;
